{
    "appTitle": "BZARU",
    "loginWithPhone": "Login with Phone",
    "enterPhoneNumber": "Enter Phone Number",
    "login": "Login",
    "getStarted": "Get Started",
    "fieldEmptyText": "This field can't be empty",
    "invalidName": "Invalid Name",
    "nameMustBeLessThan": "Name must be less than 32 letters",
    "nameShouldBeAtleast": "Name Should be atleast 3 letters",
    "invalidEmail": "Invalid Email",
    "emailMustBeLessThan": "Email must be less than 32 letters",
    "emailIsShort": "Email is too short",
    "phoneNumberMustBeLess": "Number can't be less than 10 digits",
    "onlyTenDigits": "Phone Number must only contain Digits",
    "invalidPhoneNumber": "Invalid Phone Number",
    "passwordLessThan": "Password can't be less than 8 letters",
    "passwordMustContain": "Password must contain letters & numbers",
    "resendSMS": "Resend SMS",
    "wrongNumber": "Wrong Number?",
    "submit": "Submit",
    "enterOTP": "Enter OTP",
    "enter6digitOTP": "Enter 6-digit OTP",
    "signUp": "Sign Up",
    "firstName": "First Name",
    "lastName": "Last Name",
    "email": "Email",
    "phoneNumber": "Phone Number",
    "profile": "Profile",
    "createBusinessProfile": "Create Business Profile",
    "description": "Description",
    "address1": "Address 1",
    "address2": "Address 2",
    "city": "City",
    "state": "State",
    "update": "Update",
    "business": "Business",
    "name": "Name",
    "categoryOfBusiness": "Category of Business",
    "businessPhoneNumber": "Business Phone Number",
    "businessEmail": "Business Email",
    "pinCode": "Pin Code",
    "timing": "Timing",
    "aadharCard": "Aadhaar Card Verification",
    "businessLicense": "Business License Verification",
    "save": "Save",
    "editProfile": "Edit Profile",
    "closed": "Closed",
    "schedule": "Schedule",
    "openForSelectedHours": "Open for selected hours",
    "editBusinessHours": "Edit Business Hours",
    "settings": "Settings",
    "countryCodeInd": "+91",
    "someErrorOccured": "Some error occurred! Please try again after some time",
    "mobileNotRegistered": "This mobile is not registered. Please use another no.",
    "mobileAlreadyRegistered": "This mobile is already registered. Please use another no.",
    "textCantBeMore": "Text can't be more than 46 characters",
    "enterValidPinCode": "Enter valid pin code",
    "days": "days",
    "hours": "hours",
    "minutes": "minutes",
    "orderStatus": "Order Status",
    "newText": "New",
    "agoText": "ago",
    "notifications": "Notifications",
    "clearAll": "Clear All",
    "noNewNotification": "No New Notifications",
    "totalOrder": "Total Order",
    "totalAmount": "Total Amount",
    "searchACustomer": "Search a customer",
    "noResult": "No result found",
    "customerDetails": "Customer Details",
    "address": "Address",
    "pastOrder": "Past Order",
    "orderValue": "Order Value",
    "lastOrderDate": "Last Order Date",
    "customers": "Customers",
    "fetchingList": "Fetching List",
    "inviteCustomers": "Invite Customers",
    "noCustomersFound": "No Customers found",
    "customerName": "Customer Name",
    "chats": "Chats",
    "noChatsFound": "No Chats found",
    "dashBoard": "Dashboard",
    "inviteYourContacts": "Invite your contacts",
    "expandYourBusiness": "Expand your business",
    "sendInviteToCustomer": "Send invites  to your customer",
    "findContacts": "Find Contacts",
    "shareYourLink": "Share your link",
    "share": "Share",
    "noProductAdded": "No Product Added",
    "addText": "Add",
    "searchInventory": "Search Inventory",
    "productTitle": "Product Title",
    "productDesc": "Product Description",
    "editOrder": "Edit Order",
    "loadingProducts": "Loading Products",
    "oopsSearchProduct": "OOPS! Search for another Product",
    "cancelOrder": "Cancel Order",
    "cancellingOrder": "Cancelling Order",
    "cancel": "Cancel",
    "areYourSure": "Are you Sure?",
    "cancelProceed": "If you want to proceed with order cancellation please press the button again",
    "order": "Order",
    "apply": "Apply",
    "discountOf": "Discount of ",
    "applied": "applied Succesfully",
    "pickUp": "Pick Up",
    "delievey": "Delivery",
    "discountAmount": "Discount Amount",
    "enterAValidAmount": "Enter a valid amount",
    "updatingOrder": "Updating Order",
    "discountCantBeGreater": "Discount can't be greater than the amount",
    "orderRecieved": "Order Received",
    "packing": "Packing",
    "packed": "Packed",
    "outForDelivery": "Out for Delivery",
    "completed": "Completed",
    "updateStatus": "Update Status",
    "pleaseSelectStatus": "Please select a status to update",
    "edit": "Edit",
    "orderDetails": "Order Details",
    "updatingStatus": "Updating Status",
    "status": "Status",
    "cancelled": "Canceled",
    "undefinedCateogry": "Undefined Category",
    "unit": "unit",
    "youCannotRemove": "You cannot remove the only Item",
    "quantityCantBeEmpty": "Quantity can't be empty",
    "quantityNotStart": "Quantity should not start with zero",
    "quantityShoubleBe": "Quantity should be a number",
    "pleaseSelectCategory": "Please select a category to continue.",
    "category": "Category",
    "size": "Size",
    "addProduct": "Add Product",
    "productName": "Product Name",
    "price": "Price",
    "addingProduct": "Adding Product",
    "areYouSureDelete": "Are you sure? This will permanently delete your product.",
    "delete": "Delete",
    "editProduct": "Edit Product",
    "savingProduct": "Saving Product",
    "deletingProduct": "Deleting Product",
    "productsCatalog": "Products Catalog",
    "fetchingProducts": "Fetching Products",
    "noItemsFound": "No Items found",
    "grocery": "Grocery",
    "qrCode": "QR Code",
    "done": "Done",
    "editBusinessProfile": "Edit Business Profile",
    "createBusinessAccount": "Create Business Account",
    "home": "Home",
    "chat": "Chat",
    "orders": "Orders",
    "products": "Products",
    "explore": "Explore",
    "noMessage": "No message found",
    "messageCopied": "Message copied",
    "startWithMessage": "Start with a message",
    "message": "Message",
    "contacts": "Contacts",
    "noContactsFound": "No Contacts Found.",
    "personalProfile": "Personal Profile",
    "businessProfile": "Business Profile",
    "areYouSureLogout": "Are you sure you want to Logout?",
    "yes": "Yes",
    "no": "No",
    "editAddress": "Edit Address",
    "addAddress": "Add Address",
    "country": "Country",
    "merchantName": "Merchant Name",
    "ago": "ago",
    "goToCheckout": "Go to Checkout",
    "itemName": "Item Name",
    "storeName": "Store Name",
    "addInstructions": "Add Instructions",
    "instructionLessThan": "Should be less than 120 characters",
    "personalCart": "Personal Cart",
    "oopsCartEmpty": "OOPS! The Cart is empty",
    "addDeliveryAddress": "Add delivery address",
    "primaryBreakSafe": "Primary Address of the Customer",
    "cityBreakSafe": "City, Country, Pin code",
    "selectDeliveryAdd": "Select delivery address",
    "addAnotherAdd": "Add  another address",
    "deliveryOptions": "Delivery Options",
    "selectADate": "Select a date",
    "confirm": "Confirm",
    "orderDateConfirmed": "Order's date confirmed.",
    "pleaseSelectDate": "Please select a date to continue",
    "items": "items",
    "item": "item",
    "checkout": "Checkout",
    "subTotal": "Subtotal",
    "placeOrder": "Place Order",
    "placingOrder": "Placing your order...",
    "viewAccount": "View Account",
    "yourStores": "Your Stores",
    "shopToHaveStore": "Shop to have your store listed",
    "moreStores": "More Stores",
    "noStores": "No Stores near you",
    "title": "Title",
    "searchForProduct": "Search for product or store...",
    "stores": "Stores",
    "recentSearches": "Recent Searches",
    "clear": "Clear",
    "exploring": "Exploring...",
    "oops": "Oops!",
    "weCouldnotUnderstand": "We couldn't Understand, try rephrasing the query.",
    "helpCenter": "Help Center",
    "gettingHelp": "Getting Help..",
    "howCanweHelp": "Hi! How can we help you?",
    "searchSomethingElse": "Search for Something else :(",
    "search": "Search...",
    "popularArticles": "Popular Articles",
    "getHelp": "Get help",
    "daily": "Daily",
    "termsConditions": "Terms and Conditions",
    "needToGetInTouch": "Need to get in touch?",
    "careTeam": "Our Bzaru care team is here to help",
    "areYouSenior": "Are you a senior?",
    "contactDedicated": "Contact our dedicated senior support service if you need help getting started or with an existing order.",
    "permissionsError": "Permissions error",
    "enableContactAccess": "Please enable contacts access",
    "inSettings": "permission in system settings",
    "ok": "OK",
    "referrals": "Referrals",
    "inviteContacts": "Invite your contacts",
    "sendInvites": "Send invites to your selected Contacts.",
    "contactsWillBeSaved": "Your contact will be saved for you to access later.",
    "captialItems": "ITEMS",
    "myOrders": "My Orders",
    "fetchingOrders": "Fetching Orders...",
    "noOrdersPlaced": "No Orders placed yet",
    "orderNumber": "Order Number",
    "dateOfOrder": "Date of Order",
    "modeOfOrder": "Mode of Order",
    "totalItems": "Total Items",
    "discount": "Discount",
    "editPersonalProfile": "Edit Personal Profile",
    "addToCart": "Add to cart",
    "lookingIntoStore": "Looking into Store...",
    "accept": "Accept",
    "created": "Created",
    "mode": "Mode",
    "openOrders": "Open Orders",
    "closedOrders": "Closed Orders",
    "noOrdersYet": "No Orders Yet",
    "noSelectedDate": "No Selected Date",
    "noSelectedMode": "Mode: Not Selected",
    "popluarStores": "Popular Stores",
    "popularProducts": "Popular Products",
    "deliveredOn": "Delivered on",
    "expectedOn": "Excepted on",
    "total": "Total",
    "verify": "Verify",
    "inviteOthers": "Invite Others",
    "helpAndContact": "Help & Contact Us",
    "logOut": "Log Out",
    "inviteFriends": "Invite Friends",
    "help": "Help",
    "personal": "Personal",
    "primaryProfile": "Primary Profile",
    "inviteYourFav": "Invite Your Favourite Business",
    "openBusinessAcc": "Open Business Account",
    "monday": "Monday",
    "tuesday": "Tuesday",
    "wednesday": "Wednesday",
    "thursday": "Thursday",
    "friday": "Friday",
    "saturday": "Saturday",
    "sunday": "Sunday",
    "amount": "Amount",
    "qty": "Qty",
    "discountAppliedText": "Discount applied successfully",
    "acceptingOrder": "Accepting Order...",
    "delivery": "Delivery",
    "placed": "Placed",
    "recieved": "Received",
    "languages": "Languages",
    "selectedLanguage": "English",
    "searchIn": "Search in",
    "searchFieldOrder": "Search an Order or Customer name",
    "openBusinessLater": "You can also open a business account once you log in.",
    "tapAButton": "Tap a button, get your groceries",
    "getGroceryDel": "Get your groceries delivered or ready for pickup-and spend time on what matters.",
    "shopMoreDeals": "Shop more deals, save more with us",
    "saveWithExc": "Save with exclusive deals, coupons and more-with no membership required!",
    "pleaseSelectLanguage": "Please Select your language.",
    "pickup": "PickUp",
    "viewPrivacy": "View Privacy & Terms",
    "nextText": "Next",
    "accepted": "accepted",
    "complete": "complete",
    "PleaseConnectTo": "Please connect to the internet to continue.",
    "inStock": "Product in Stock",
    "bestForYou": "Best for you",
    "productSynonym": "What do you call this product in your language? Use a comma to separate.",
    "chooseAnOption": "Choose an option",
    "noDataAvaialble": "No Data Avaialble",
    "mrpText": "MRP",
    "accountLocked": "Your account is locked. Please contact support to unlock your account.",
    "reviewCart" : "Review Cart",
    "orderConfirmation" : "Order Confirmation",
    "goToHome" : "Go to homepage",
    "readyForPickup" : "Ready for pickup",
    "out for delivery" : "Out for delivery",
    "ready for pickup" : "Ready for pickup",
    "add your store address": "Add your store address",
    "location": "Location",
    "change": "Change"

}